# AlignUnformEval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
alignunformeval/: __init__.py  eval.py  stsb.py  tmup.py
test/: encode.py  test_eval.py  test_stsb.py  test_tmup.py
