[tool.poetry]
name = "alignunformeval"
version = "0.0.1"
description = ""
authors = ["akiFQC <yakaredori@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
