[tool.poetry]
name = "alignunformeval"
version = "0.0.1.1"
description = "This is a python tool to evaluate alignment and uniformity of sentence embedding"
authors = ["akiFQC <yakaredori@gmail.com>"]
homepage = "https://github.com/akiFQC/AlignUnformEval"
repository = "https://github.com/akiFQC/AlignUnformEval"
readme = "README.md" 

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
